--- a/public/templates/info/info.html
+++ b/public/templates/info/info.html
@@ -1,4 +1,5 @@
-<div ng-show="platform.isJDBL() || platform.isJugendsommer()"><div ng-include src="'templates/info/info-jdbl.html'"></div></div>
+<div ng-show="(platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'"><div ng-include src="'templates/info/info-jdbl-de.html'"></div></div>
+<div ng-show="(platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'"><div ng-include src="'templates/info/info-jdbl-it.html'"></div></div>
 
 <div ng-show="platform.isKiso() && lang == 'de'"><div ng-include src="'templates/info/info-kiso-de.html'"></div></div>
 <div ng-show="platform.isKiso() && lang == 'it'"><div ng-include src="'templates/info/info-kiso-it.html'"></div></div>
