--- a/public/templates/agb/agb-jdbl-it.html
+++ b/public/templates/agb/agb-jdbl-it.html
@@ -1,42 +1,16 @@
 <div class="container">
     <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
-    <div ng-show='type === "summer" || type === "music" || type === "club"'>
+    <div>
 	    <div class='col-sm-9'>
 	        <ul>
-		        <li>Nach erfolgreicher digitalen Anmeldung ist die Bezahlung verpflichtend. Zudem ist eine Abmeldung oder R&uuml;ckerstattung des Teilnehmerbetrages aus organisatorischen Gr&uumlnden nicht mehr m&ouml;glich. Krankheitsbedingt wird gegen Vorlage eines &auml;rztlichen Zeugnisses (innerhalb von 5 Tagen) die gesamte Teilnahmegeb&uuml;hr zurückerstattet.</li>
-		        <li>Die Eltern bzw. Erziehungsberechtigten &uuml;bernehmen die Verantwortung für den Hin- und Rückweg des Kindes zu den jeweiligen Programmen. Untertags werden die Jugendlichen von den Betreuer/innen beaufsichtigt.</li>
-		        <li>Versicherung: Alle Teilnehmer/innen sind &uuml;ber die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert.</li>
-		        <li>Die Eltern bzw. Erziehungsberechtigten erkl&auml;ren sich mit Disziplinarmaßnahmen der Betreuer/innen einverstanden: Bei wiederholten Verst&ouml;ßen gegen Vereinbarungen und nach R&uuml;cksprache mit dem Elternhaus werden die Jugendlichen nach Hause geschickt.</li>
-		        <li>EINWILLIGUNG ZUR VER&Ouml;FFENTLICHUNG VON FOTOS UND VIDEOAUFNAHMEN: Wir informieren hiermit ausdr&uumlcklich, dass im Laufe der Sommerferienprogramme von den Teilnehmern Bilder in digitaler und herk&ouml;mmlicher Form  sowie Videoaufnahmen, von erm&auml;chtigten Mitarbeitern des Jugenddienstes gemacht werden und diese Bilder und Filme ausschließlich im Sinne der T&auml;tigkeit des Jugenddienstes, in Presseaussendungen, Internetauftritten und Bildershows verwendet, ver&ouml;ffentlicht und verbreitet werden. Mit seiner Zustimmung best&aumltigt der erm&auml;chtigte Elternteil, die hier angef&uuml;hrte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdr&uuml;cklich zu erm&auml;chtigen, die Bilder und Aufnahmen zu den besagten Zwecken, kostenlos zu verwenden.</li>
-		        <li>DATENSCHUTZ: Mit der Anmeldung wird das Einverst&auml;ndnis zur allgemeinen Verarbeitung der pers&ouml;nlichen Daten im Rahmen der Verwaltung der Veranstaltung im Sinne der geltenden Datenschutzbestimmungen laut L.D. 196/2003 erteilt. Mitteilung im Sinne des Art. 13 des Legislativdekretes Nr. 196/03:S&auml;mtliche von Ihnen erhobenen Daten werden ausschließlich für interne Zwecke verarbeitet und für Rundschreiben sowie für die Erstellung der Teilnehmerlisten bei den Sommerferienprogrammen verwendet. Mit seiner Anmeldung best&auml;tigt der erm&auml;chtigte Elternteil/User, die hier angef&uml;hrte Information zur Kenntnis genommen zu haben und den Jugenddienst ausdr&uuml;cklich zu erm&auml;chtigen, die pers&ouml;nlichen Daten zu den besagten Zwecken, zu verwenden.</li>
-	        </ul>
-	    </div>
-	    <br />
-	    <h2 class='text-orange col-sm-12'>Allgemeine Infos zu den Programmen:</h2>
-	    <div class='col-sm-9'>
-	        <ul>
-		        <li>Verpflegung, Materialspesen, usw. sind im jeweiligen TeilnehmerInnen Preis enthalten (Die Preise stehen beim jeweiligen Programm dabei). Die Preise variieren nach Gemeinde/Programm, da die jeweiligen Gemeinden die Sommerprogramme unterschiedlich finanziell unterst&uumltzen.</li>
-		        <li>TeilnehmerInnen d&uuml;rfen sich  grunds&auml;tzlich nur bei den Sommerprogrammen in ihrer Wohnsitzgemeinde anmelden. Ausnahmen bilden die Programme, die offen f&uuml;r alle sind. Diese Programme befinden sich im letzten Teil der Brosch&uumlre.</li>
-		        <li>TeilnehmerInnen m&uuml;ssen im Einzugsgebiet des Jugenddienstes Bozen-Land ans&auml;ssig sein.</li>
-		        <li>Finanziert werden die Sommerprogramme von der jeweiligen Gemeinde, der Familienagentur des Landes S&uuml;dtirol, Sponsoren und dem Jugenddienst Bozen-Land.</li>
-		        <li>Versicherung: Alle TeilnehmerInnen sind über die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert.</li>
-		        <li>Eine Kostenr&uuml;ckerstattung gibt es nur bei Krankheit mit Vorlage eines &auml;rztlichen Zeugnisses.</li>
-		        <li>Die TeilnehmerInnen erhalten bei einer Spende von 10 Euro einen Jugenddienststick (4GB) mit allen Fotos des jeweiligen Programmes! Die Sticks d&uuml;rfen behalten werden! Es d&uuml;rfen auch Jugenddienststicks vom letzten Jahr verwendet werden. Diese m&uuml;ssen leer sein und am Anfang des jeweiligen Programmes den BetreuerInnen übergeben werden.</li>
-		        <li>KINDER MIT BESONDEREM BETREUUNGSAUFWAND: Dem Jugenddienst Bozen-Land ist es ein großes Anliegen auch Kinder mit k&ouml;rperlicher/geistiger Beeintr&auml;chtigung in die Programme zu integrieren. Kinder, welche aufgrund ihrer Situation, Verfassung und k&ouml;rperlicher Ressourcen einen besonderen Betreuungsaufwand ben&ouml;tigen, werden so weit als m&ouml;glich durch eine zus&auml;tzliche Betreuungsperson w&auml;hrend des Programms begleitet. Bitte bei der Anmeldung im vorgesehenen Feld eine kurze Beschreibung der Beeintr&auml;chtigung einf&uuml;gen. Bei einem pers&ouml;nliches Gespr&auml;ch im Fr&uuml;hjahr werden alle weiteren Details gekl&auml;rt.</li>
-	    </ul>
-	    </div>
-    </div>
-    <div ng-show='type === "spiritnight"'>
-	    <div class='col-sm-9'>
-	        <ol>
-		        <li>Die Begleitpersonen sind für die Firmlinge w&auml;hrend der gesamten Veranstaltung verantwortlich.</li>
-		        <li>Versicherung: Alle Teilnehmer/innen sind über die Versicherung AGJD (Arbeitsgemeinschaft der Jugenddienste) Haftpflicht versichert; Achtung nicht Unfall versichert.</li>
-		        <li>Die Kosten belaufen sich auf 12 Euro pro Teilnehmer und müssen vorab f&uuml;r die gesamte Pfarrei/Gruppe dem Kloster &uuml;berwiesen werden. Die Rechnungsdaten hierfür folgen mittels E-mail.</li>
-		        <li>Die Begleitpersonen zeigen sich für einen reibungslosen Ablauf verantwortlich. Hierf&uuml;r muss die gemeldete Gruppe immer in Begleitung eines Betreuers sein (Vollj&auml;hrig) und ein respektvolles Benehmen wird vorausgesetzt.</li>
-		        <li>Aufgrund der Privacy-Bestimmungen sind wir verpflichtet, die Eltern/Begleitpersonen um Erlaubnis zu fragen, Fotos/Videos/Interviews von den Kindern/Betreuern machen zu d&uuml;rfen und einzelne davon im Sinne der T&auml;tigkeit des Vereins (z.B. Presseaussendungen, Informationsbroschüren, Internetauftritte) ver&ouml;ffentlichen zu d&uuml;rfen.</li>
-		        <li>Der Start der Spiritnight ist pünktlich um 16.30 Uhr. Bitte um pünktliches Erscheinen.</li>
-		        <li>Die Hin- und R&uuml;ckfahrt muss eigenst&auml;ndig von jeder Pfarrei organisiert werden.</li>
-	        </ol>
+				<li>In seguito all’iscrizione online il pagamento è obbligatorio. Per motivi organizzativi l&#39;annullamento dell’iscrizione ed il rimborso della quota non sono possibili. Esclusivamente nel caso di malattia l&#39;intera quota di partecipazione sarà rimborsata su presentazione di un certificato medico (entro 5 giorni).</li>
+				<li>I genitori o i tutori legali si assumono la responsabilità del tragitto del proprio figlio da e verso i rispettivi programmi. Durante il giorno i bambini ed i giovani sono sorvegliati dagli accompagnatori del programma estivo.</li>
+				<li>Assicurazione: Tutti i partecipanti sono assicurati per la responsabilità civile tramite l&#39;assicurazione AGJD (Associazione dei Servizi Giovanili).</li>
+				<li>I genitori o i tutori legali si dichiarano d&#39;accordo con le misure disciplinari adottate dagli assistenti: in caso di ripetute violazioni degli accordi e previa consultazione con i genitori, i giovani vengono rimandati a casa.</li>
+				<li>I partecipanti possono iscriversi ai programmi estivi del Comune di residenza. Fanno eccezione i programmi che sono aperti a tutti, questi li trovate nell&#39;ultima parte dell&#39;opuscolo.</li>
+				<li>I partecipanti devono essere residenti nell’area di competenza del Jugenddienst.</li>
+				<li>I programmi estivi sono finanziati dal rispettivo comune, dall&#39;Agenzia per la Famiglia della Provincia</li>
+			</ul>
 	    </div>
     </div>
 </div>
