jugendsommer content datenschutz

--- a/public/templates/agb/ds-jdbl-de.html
+++ b/public/templates/agb/ds-jdbl-de.html
@@ -143,18 +143,52 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>Gesundheitsdaten (Allergien, Lebensmit-telunverträglichkeiten, Medikamente)</td>
+									<td>Art. 6, Abs. 1, Buchst. a) und d) sowie Art. 9, Abs. 1 – notwen-dig, um der Aufsichtspflicht nachzukommen; Schutz des Minderjährigen vor lebensbe-drohlichen Situationen; Einwil-ligung der erziehungsberechtig-ten Personen notwendig</td>
+									<td>Nach Beendigung des Programms</td>
+									<td>
+										<ul>
+											<li>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</li>
+											<li>Arzt / Sanitäter (im Be-darfsfall)</li>
+										</ul>
+									</td>
+									<td>
+										<ul>
+											<li>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungs-vertrages</li>
+											<li>Art. 6, Abs. 1, Buchst. d) – Schutz des Lebens </li>
+										</ul>
+									</td>
 								</tr>
 								<tr>
-			
+									<td>Gesundheitsdaten (Angaben zu physischer und/oder psychischer Beeinträchtigung</td>
+									<td>Art. 6, Abs. 1, Buchst. a) und d) sowie Art. 9, Abs. 1 – notwen-dig, um der Aufsichtspflicht nachzukommen; Schutz des Minderjährigen vor lebensbe-drohlichen Situationen; Einwil-ligung der erziehungsberechtig-ten Personen notwendig</td>
+									<td>Nach Beendigung des Programms</td>
+									<td>
+										<ul>
+											<li>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</li>
+											<li>Arzt / Sanitäter (im Be-darfsfall)</li>
+										</ul>
+									</td>
+									<td>
+										<ul>
+											<li>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungs-vertrages</li>
+											<li>Art. 6, Abs. 1, Buchst. d) – Schutz des Lebens </li>
+										</ul>
+									</td>
 								</tr>
 								<tr>
-			
+									<td>Gesundheitsdaten (ärztliches Attest, welches die Nichtteilnahme am Pro-gramm wegen Krankheit bestätigt</td>
+									<td>Art. 6, Abs. 1, Buchst. a) b) und d) sowie Art. 9, Abs. 1 – notwendig, um die Anzahlung für das Programm zurückzuerhal-ten; gerechtfertigte Auflösung des Vertrages; Einwilligung der erziehungsberechtigten Personen notwendig</td>
+									<td>Nach Verifizierung seitens des JD Bozen-Land, dass der Auflö-sungsgrund des Vertra-ges besteht</td>
+									<td></td>
+									<td></td>
 								</tr>
 							</tbody>
 						</table>
 					</div>
 				</li>
 				<li>
+
 					<h4>Übersicht über die Verarbeitung der fakultativen personenbezogenen Daten</h4>
 					<div>
 						<table style="font-size: 60%">
@@ -169,14 +203,103 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>Vor- und Nachname für Öffentlichkeits-arbeit</td>
+									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Vor- und Nachnamen für die Öffent-lichkeitsarbeit des JD Bozen-Land zu verwenden</td>
+									<td>Bei Veröffentlichungen in Medien bei Aus-übung Recht auf Löschen; Löschvorgang muss für den JD Bozen-Land  zumutbar sein</td>
+									<td>
+										<ul>
+											<li>Homepage des JD Bozen-Land</li>
+											<li>Newsletter des JD Bozen-Land</li>
+											<li>Hauseigene Veröffentli-chungen</li>
+											<li>Lokale Printmedien</li>
+											<li>Soziale Medien</li>
+										</ul>
+									</td>
+									<td>Art. 6, Abs. 1, Buchst. a) – Einwilli-gung der betroffenen Person notwendig</td>
 								</tr>
 								<tr>
-								</tr>
-								<tr>
-		
+									<td>Lichtbild für Öffentlichkeitsarbeit</td>
+									<td>Art. 6, Abs. 1, Buchst. a) – Einwilligung der betroffenen Person (bzw. Eltern /erziehungsberechtigten Perso-nen) notwendig, um deren Lichtbild für die Öffentlich-keitsarbeit des JD Bozen-Land zu verwenden</td>
+									<td>in Medien bei Ausübung Recht auf Löschen; Löschvorgang muss für den JD Bozen-Land  zumutbar sein</td>
+									<td>
+										<ul>
+											<li>Homepage des JD Bozen-Land</li>
+											<li>Newsletter des JD Bozen-Land</li>
+											<li>Hauseigene Veröffentli-chungen</li>
+											<li>Lokale Printmedien</li>
+											<li>Soziale Medien</li>
+										</ul>
+									</td>
+									<td>Art. 6, Abs. 1, Buchst. a) – Einwilli-gung der betroffenen Person notwendig</td>
 								</tr>
 							</tbody>
 						</table>
+					</div>
+				</li>
+				<li>
+					<h4>Art der Speicherung</h4>
+					<div>
+						Der JD Bozen-Land verarbeitet Deine personenbezogenen Daten in digitaler Form (elektronische Speicherung der Daten). Dabei ge-währleistet der JD Bozen-Land den größtmöglichen Schutz Deiner personenbezogenen Daten durch entsprechende technische und orga-nisatorische Maßnahmen.
+					</div>
+				</li>
+				<li>
+					<h4>Mitteilung der Daten an Drittländer oder internationale Organisatione</h4>
+					<div>
+						Es werden keine personenbezogenen Daten an einem Empfänger in einem Drittland oder einer internationalen Organisation übermittelt.
+					</div>
+				</li>
+				<li>
+					<h4>Auskunftsrecht</h4>
+					<div>Du hast das Recht auf Auskunft über:
+						<ul>
+							<li>die Herkunft der personenbezogenen Daten;</li>
+							<li>den Zweck und die Modalitäten der Verarbeitung;</li>
+							<li>das angewandte System, falls die Daten elektronisch verarbeitet werden;</li>
+							<li>die wichtigsten Daten zur Identifizierung des Rechtsinhabers und der Verantwortlichen;</li>
+							<li>die Personen oder Kategorien von Personen, denen die personenbezogenen Daten übermittelt werden können oder die als im Staatsgebiet namhaft gemachte Vertreter, als Verantwortliche oder als Beauftragte davon Kenntnis erlangen können.</li>
+						</ul>
+				   </div>
+				</li>
+				<li>
+					<h4>Weigerung</h4>
+					<div>
+						Solltest Du die notwendigen Daten nicht oder nicht zeitgerecht zur Verfügung stellen, kannst Du nicht am Sommerprogramm teilnehmen. Jedenfalls übernimmt der JD Bozen-Land aus Deiner Weigerung wegen keine Haftungen, weder Dir noch Dritten gegenübe
+					</div>
+				</li>
+				<li>
+					<h4>Recht auf Berichtigung, Löschung, „Vergessenwerden“, Einschränkung und Widerspruch</h4>
+					<div>
+						Du hast das Recht auf Berichtigung oder Löschung, auch „Vergessenwerden“ Deiner personenbezogenen Daten oder auf Einschränkung der Verarbeitung Ihrer Daten. Ebenso hast Du ein Widerspruchsrecht gegen die Verarbeitung. Ein entsprechender Antrag kann formlos an den JD Bozen-Land gestellt werden.
+					</div>
+				</li>
+				<li>
+					<h4>Beschwerderecht bei einer Aufsichtsbehörde</h4>
+					<div>
+						Du hast das Recht, bezüglich der Erhebung und Verarbeitung Deiner personenbezogenen Daten Beschwerde bei einer vom italienischen Staat hierfür bezeichneten Aufsichtsbehörde (dzt. italienische Datenschutzbehörde Garante per la protezione dei dati personali) zu erheben.
+					</div>
+				</li>
+				<li>
+					<h4>Aushändigung von Kopien</h4>
+					<div>
+						Du kannst eine Kopie Deiner vom JD Bozen-Land erhobenen und verarbeiteten personenbezogenen Daten beantragen. Die Übermittlung der Kopien erfolgt grundsätzlich in elektronischer Form, außer Du beantragst ausdrücklich eine Aushändigung in Papierform. Werden weitere Kopien beantragt, so kann der JD Bozen-Land ein angemessenes Entgelt hierfür in Rechnung stellen.
+					</div>
+				</li>
+				<li>
+					<h4>Recht auf Datenübertragbarkeit</h4>
+					<div>
+						Du hast das Recht, Deine personenbezogenen Daten, die Du dem JD Bozen-Land zur Verfügung gestellt hast, in einem strukturierten, gängigen und lesbaren Format zu erhalten. Ebenso hast Du das Recht, dass Deine Daten einer anderen, von Dir bezeichneten Person, ohne Behinderung übermittelt werden.
+					</div>
+				</li>
+				<li>
+					<h4>Verarbeitung von Gesundheitsdaten</h4>
+					<div>
+						Für die Teilnahme am Sommerprogramm ist die Verarbeitung von Gesundheitsdaten notwendig. Da es sich hierbei um besonders schützenswerte Daten handelt, ist die Einwilligung der Eltern / erziehungsberechtigten Personen notwendig.
+					</div>
+				</li>
+				<li>
+					<h4>Öffentlichkeitsarbeit – Fakultative Einwilligung</h4>
+					<div>
+						Es ist ein Anliegen des JD Bozen-Land, seine Tätigkeit auch der Öffentlichkeit vorzustellen. Da die Erfüllung dieses Anliegens nicht notwendig für die Teilnahme am Sommerprogramm ist, bedarf es einer ausdrücklichen Einwilligung seitens der erziehungsberechtigten Personen.
 					</div>
 				</li>
 			</ol>
