jdbl dataenschutz it

--- a/public/templates/agb/ds-jdbl-it.html
+++ b/public/templates/agb/ds-jdbl-it.html
@@ -1,63 +1,63 @@
 <div class="container">
-    <h3 class='text-orange col-sm-12'>Datenschutzinformationsblatt</h3>
-	<h4>Sommerprogramm Jugenddienst Bozen-Land</h4>
+    <h3 class='text-orange col-sm-12'>Scheda informativa sulla protezione dei dati</h3>
+	<h4>Programmi estivi Jugenddienst Bozen-Land</h4>
     <div ng-show='type === "summer" || type === "music" || type === "club" || type === "bike"'>
 	    <div class='col-sm-9'>
-			<p>Wir freuen uns, dass Du an unserem Sommerprogramm teilnehmen möchtest. Damit Du teilnehmen kannst, benötigen wir einige Daten von Dir. Welche das sind, erfahren Du und Deine Eltern / erziehungsberechtigten Personen in diesem Informationsblatt.</p>
+			<p>Siamo lieti che vuoi partecipare al nostro programma estivo. Per poter partecipare, abbiamo bisogno di alcuni dati personali che Ti riguar-dano. Con la presente informativa informiamo Te e i tuoi genitori/esercenti della potestà genitoriale quali dati per quali obiettivi tratteremo.</p>
 			<ol>
 				<li>
-					<h4>Zweck der Angabe Ihrer personenbezogenen Daten></h4>
+					<h4>1.	Finalità del conferimento dei dati personali</h4>
 					<div>
-						Wir benötigen bestimmte Daten von Dir, damit wir wissen, wer am Sommerprogramm teilnimmt, wie alt Du bist und in welche Klasse Du gehst, da das Programm jungen Menschen ab einem bestimmten Personen vorenthalten ist. Ebenso benötigen wir Daten Deiner Eltern / erziehungsberechtigten Personen für organisatorische Angelegenheiten und Kontakte im Notfall. Zudem benötigen wir einige Gesundheitsdaten von Dir, damit wir zum einen auf Deine Bedürfnisse (bspw. Essen, Beeinträchtigungen etc.) Rücksicht nehmen können und wir, im Bedarfsfall, Dir unmittelbar helfen können. Daten für unsere Öffentlichkeitsarbeit (wir wollen gerne Fotos von Dir veröffentlichen) sind nicht für die Teilnahme am Sommerprogramm notwendig. Damit wir diese verarbeiten können, benötigen wir die Einwilligung Deiner Eltern / erziehungsberechtigten Personen.
+						Abbiamo bisogno alcuni dati personali che Ti riguardano in modo da sapere chi partecipa al programma estivo, quanti anni ha e quale classe frequenti, poiché la partecipazione al programma estivo è riservato ai giovani di una certa età. Abbiamo bisogno anche dei dati dei tuoi genitori / esercenti della potestà genitoriale per questioni organizzative e contatti in caso di emergenza. Inoltre, abbiamo bisogno di alcuni dati sanitari, in modo da poterci adeguare al meglio a concrete esigenze tue (ad es. cibo, disabilità, ecc.) e per poterti aiutare diret-tamente se necessario. Dati personali che useremo per pubbliche relazioni (vorremmo pubblicare p.e. tue foto) non sono necessari per la partecipazione al programma estivo. Per poterli trattare, abbiamo bisogno del consenso dei vostri genitori/ esercenti la potestà genitoriale.
 					</div>
 				</li>
 				<li>
-					<h4>Minderjährige Personen</h4>
+					<h4>Persone minorenni</h4>
 					<div>
-						Da Du minderjährig bist, müssen beide Eltern bzw. die erziehungsberechtigten Personen diese Datenschutzerklärung zur Kenntnis nehmen bzw. müssen diese die Einwilligung sowohl der Gesundheitsdaten als auch zur Verarbeitung der fakultativen Daten geben. In der Folge umfasst der Begriff „Du“ sowohl Dich persönlich auch die jeweils erziehungsberechtigten Personen.
+						Essendo minorenni, entrambi i genitori o gli esercenti della potestà genitoriale devono prendere atto della presente informativa sulla priva-cy o dare il loro consenso sia al trattamento dei dati sanitari che al trattamento dei dati facoltativi. Di seguito, il termine "Tu" comprende sia te personalmente che i rispettivi esercenti della potestà genitoriale.
 					</div>
 				</li>
 				<li>
-					<h4>Freiwilligkeit der Verarbeitung</h4>
+					<h4>Natura volontaria della trattamento</h4>
 					<div>
-						Die Erhebung und Verarbeitung der personenbezogenen Daten seitens des JD Bozen-Land erfolgt freiwillig. Du bist also nicht verpflichtet, irgendwelche personenbezogenen Daten dem JD Bozen-Land zu übermitteln. Wenn Du aber am Sommerprogramm teilnehmen willst, musst Du uns die notwendigen Daten zur Verfügung stellen.
+						La raccolta e il trattamento dei dati personali da parte del Jugenddienst Bozen-Land è volontaria. Pertanto non sei obbligato a fornirci alcun dato personale. Tuttavia, se vuoi partecipare al programma estivo, devi fornirci i dati necessari.
 					</div>
 				</li>
 				<li>
-					<h4>Verantwortlicher für die Verarbeitung der personenbezogenen Daten</h4>
+					<h4>Titolare del trattamento dei dati personali</h4>
 					<div>
-						Verantwortlich für die Verarbeitung der personenbezogenen Daten ist der Jugenddienst Bozen-Land EO („JD Bozen-Land“), Andreas-Hofer-Straße 36, 39100 Bozen, Steuernummer: 94072680211 in Person des Vorsitzenden, Tel. 0471-324753, E-Mail: info@jugenddienst.com.
+						Responsabile del trattamento dei dati personali è lo Jugenddienst Bozen-Land EO ("JD Bozen-Land"), Via Andreas Hofer 36, 39100 Bolzano, codice fiscale: 94072680211 in persona dell’attuale presidente, telefono 0471-324753, e-mail: info@jugenddienst.com.
 					</div>
 				</li>
 				<li>
-					<h4>Art der personenbezogenen Daten, die verarbeitet werden</h4>
-					<div>Der JD Bozen-Land weist darauf hin, dass sowohl allgemeine personenbezogene Daten, als auch besondere Kategorien von personenbezogenen Daten (sensible Daten wie Gesundheitsdaten) erhoben und verarbeitet (gespeichert, weitergegeben, usw.) werden.</div>
+					<h4>Natura dei dati personali trattati</h4>
+					<div>Il JD Bozen-Land sottolinea che vengono raccolti e trattati (memorizzati, trasmessi, ecc.) sia dati personali generali che categorie partico-lari di dati personali (dati sensibili come p.e. dati sanitari). </div>
 				</li>
 				<li>
-					<h4>Mitteilung der Daten an Dritte</h4>
+					<h4>Comunicazione dei dati a terzi</h4>
 					<div>
-						Deine personenbezogenen Daten werden an Dritte weitergeleitet. Die Weiterleitung erfolgt dabei an unserem Auftragsverarbeiter, über welchen wir die Onlineanmeldung vornehmen.
+						I vostri dati personali saranno trasmessi a terzi. L'inoltro avviene al nostro responsabile del trattamento, attraverso il quale effettuiamo la registrazione online.
 					</div>
 				</li>
 				<li>
-					<h4>Dauer der Verarbeitung</h4>
+					<h4>Durata del trattamento</h4>
 					<div>
-						Deine Daten werden grundsätzlich bis zum Ende des darauffolgenden Kalenderjahres gespeichert, um jenen Personen, die eine Teilnahmebestätigung für fiskalische Zwecke benötigen, bereitstellen zu können. Zudem werden die Programme von der öffentlichen Hand mitfinanziert, weshalb diese Daten für den genannten Zeitraum für etwaige Kontrollen gespeichert werden müssen. Einzelheiten findest Du in der nachstehenden Übersicht.
+						I tuoi dati saranno, in linea di principio, conservati fino alla fine dell'anno solare successivo al programma estivo al quale hai partecipato. Ciò per poter fornire alle persone una conferma di partecipazione a fini fiscali. Inoltre, i programmi estivi sono cofinanziati dalle autorità pubbliche e quindi i tuoi dati devono essere conservati per il periodo indicato per eventuali controlli. I dettagli sulla durata del trattamento li trovi nella panoramica sottostante.
 					</div>
 				</li>
 				<li>
-					<h4>Übersicht über die Verarbeitung der notwendigen personenbezogenen Daten</h4>
+					<h4>Panoramica del trattamento dei dati personali necessari</h4>
 					<div>
-						Folgende personenbezogene Daten werden notwendigerweise erhoben.
+						I seguenti dati personali vengono necessariamente trattati.
 					</div>
 					<table style="font-size: 60%">
 						<thead>
 							<tr>
-								<th><strong>Datensatzbezeichnung</strong></th>
-								<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
-								<th><strong>Geplante Löschung</strong></th>
-								<th><strong>Externe Weitergabe?</strong></th>
-								<th><strong>Zweck der Weiterleitung</strong></th>
+								<th><strong>Categoria dati</strong></th>
+								<th><strong>Base giuridica GDPR - Finalità del trattamento</strong></th>
+								<th><strong>Cancellazione pianificata</strong></th>
+								<th><strong>Trasferimento die dati?</strong></th>
+								<th><strong>Finalità del trasferimento</strong></th>
 							</tr>
 						</thead>						
 						<tbody>
