features jddbl xxx

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -41,17 +41,17 @@
 						<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
 						<span ng-show='event.type === "club"' class='glyphicon glyphicon-home'></span>
 						<span ng-show='event.type === "jumprun"' class='glyphicon glyphicon-refresh'></span>
+						<span ng-show='event.type === "bike"' class='glyphicon glyphicon-cog'></span>
 					</a>
 					</div>
 					<div class='btn-main' ng-show="platform.isJDUL()">
-							<span ng-show='event.type === "summer" && !platform.isJDUL()' class='glyphicon glyphicon-certificate'></span>
-							<span ng-show='event.type === "summer" && platform.isJDUL()'><img src='../../assets/button_ente.png' class='pull-left' style='width:45px;margin-right:10px' /></span>
-							<span ng-show='event.type === "music"' class='glyphicon glyphicon-music'></span>
-							<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
-							<span ng-show='event.type === "club"' class='glyphicon glyphicon-home'></span>
-							<span ng-show='event.type === "jumprun"' class='glyphicon glyphicon-refresh'></span>
-							<span ng-show='event.type === "bike"' class='glyphicon glyphicon-map-marker'></span>
-
+						<span ng-show='event.type === "summer" && !platform.isJDUL()' class='glyphicon glyphicon-certificate'></span>
+						<span ng-show='event.type === "summer" && platform.isJDUL()'><img src='../../assets/button_ente.png' class='pull-left' style='width:45px;margin-right:10px' /></span>
+						<span ng-show='event.type === "music"' class='glyphicon glyphicon-music'></span>
+						<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
+						<span ng-show='event.type === "club"' class='glyphicon glyphicon-home'></span>
+						<span ng-show='event.type === "jumprun"' class='glyphicon glyphicon-refresh'></span>
+						<span ng-show='event.type === "bike"' class='glyphicon glyphicon-cog'></span>
 					</div>
 				</div>
 				<div class='col-sm-9'>
