--- a/public/templates/info/info-jdbl-it.html
+++ b/public/templates/info/info-jdbl-it.html
@@ -7,6 +7,6 @@
 		<li><strong>Approccio pedagogico:</strong> Ciò che ci sta a cuore nella realizzazione dei programmi estivi non è solamente l’accompagnamento dei bambini e dei giovani, ma soprattutto dare loro la possibilità di divertirsi, di essere attivi e di vivere tante nuove e fantastiche esperienze.</li>
 		<li><strong>Unser Team:</strong> Oltre agli dipendenti a tempo pieno del Jugenddienst, durante l‘estate vengono attivati molti accompagnatori co-responsabili del programma estivo. Da anni il Jugenddienst si affida a un team di professionisti della formazione caratterizzati dalla vivacità. Questa combinazione si è dimostrata efficace ed è una garanzia per i molti e fantastici programmi estivi.</li>
 	</ul>
-	<h3>Kontakt</h3>
+	<h3>Contatto</h3>
 	<strong>Jasmine Saltuari</strong> (Tel. <a href='tel:+3473340181'>+3473340181</a>)
 </div>
