--- a/public/templates/info/info-jdul-de.html
+++ b/public/templates/info/info-jdul-de.html
@@ -1,7 +1,7 @@
 <div class="container" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;">
 <img src="./../../../assets/jdul_ente.jpg" style="height:320px;margin-right:15px" /><br >
 <p>Sommerferienprogramme für Kindergartenkinder, Grundschulkinder und Mittelschülerinnen im Unterland</p>
-<p>Nähere Infos finden Sie in der folgenden <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">Broschüre</a> oder unter <a href="https://www.jugenddienst.it/unterland">www.jugenddienst.it/unterland</a></p>
+<p>Nähere Infos finden Sie in der folgenden <a href="https://www.jugenddienstunterland.it/app/download/7297361561/JDSUMMER+2018.pdf?t=1518711066">Broschüre</a> oder unter <a href="https://www.jugenddienstunterland.it/">www.jugenddienstunterland.it</a></p>
 <!--<h2>Sommerferienprogramme für Kindergartenkinder und Grundsch&uuml;lerInnen</h2>
 <h4 class="brand-orange">DAS PROGRAMM:</h4>
 <p>
