--- a/public/templates/agb/agb-jdbl-de.html
+++ b/public/templates/agb/agb-jdbl-de.html
@@ -1,6 +1,7 @@
 <div class="container">
     <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
     <div>
+
 	    <div class='col-sm-9'>
 	        <ul>
 				<li>Nach erfolgreicher digitaler Anmeldung ist die Bezahlung verpflichtend und termingerecht durchzuführen. Zudem ist eine Abmeldung oder Rückerstattung des Teilnehmerbetrages aus organisatorischen Gründen nicht mehr möglich. Krankheitsbedingt wird gegen Vorlage eines ärztlichen Zeugnisses (innerhalb von 5 Tagen) die gesamte Teilnahmegebühr zurückerstattet.</li>
@@ -12,5 +13,7 @@
 				<li>Finanziert werden die Sommerprogramme von der jeweiligen Gemeinde, der Familienagentur des Landes Südtirol, Sponsoren und dem Jugenddienst Bozen-Land.</li>
 	        </ul>
 	    </div>
-    </div>
+	</div>
+	<br />
+	<div ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
 </div>
