--- a/public/templates/agb/agb-jdbl-it.html
+++ b/public/templates/agb/agb-jdbl-it.html
@@ -1,6 +1,7 @@
 <div class="container">
     <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
     <div>
+
 	    <div class='col-sm-9'>
 	        <ul>
 				<li>In seguito all’iscrizione online il pagamento è obbligatorio. Per motivi organizzativi l&#39;annullamento dell’iscrizione ed il rimborso della quota non sono possibili. Esclusivamente nel caso di malattia l&#39;intera quota di partecipazione sarà rimborsata su presentazione di un certificato medico (entro 5 giorni).</li>
@@ -12,5 +13,7 @@
 				<li>I programmi estivi sono finanziati dal rispettivo comune, dall&#39;Agenzia per la Famiglia della Provincia</li>
 			</ul>
 	    </div>
-    </div>
+	</div>
+	<br />
+	<div ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
 </div>
