--- a/public/templates/registration/registrationOwnEdit.html
+++ b/public/templates/registration/registrationOwnEdit.html
@@ -61,20 +61,6 @@
 			<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>
 		</div>
 	</div>
-	<!-- HEALTHCHILD -->
-	<div class='form-group' ng-class='{ "has-error": registrationForm.healthChild.$invalid }'>
-		<label for='healthChild' class='control-label col-sm-2'>Gesundheitliche Probleme</label>
-		<div class='col-sm-10'>
-			<textarea name='healthChild' ng-model='healthChild' rows='3' maxlength='350' class='form-control'></textarea>
-		</div>
-	</div>
-	<!-- ADDRESSCHILD -->
-	<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
-		<label for='addressChild' class='control-label col-sm-2'>Adresse</label>
-		<div class='col-sm-10'>
-			<input name='addressChild' type='text' ng-model='addressChild' required maxlength='100' class='form-control'></input>
-		</div>
-	</div>
 	<!-- CITYCHILD -->
 	<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
 		<label for='cityChild' class='control-label col-sm-2'>Gemeinde</label>
@@ -84,19 +70,66 @@
 			</select>
 		</div>
 	</div>
-
-	<!-- HASDISABILITY -->
-	<div class='col-sm-offset-2 col-sm4'>
-		<input type='checkbox' name='hasDisability' ng-model='hasDisability'><strong>  Beeinträchtigung</input>
-	</div>
-	<!-- DISABILITY DESCRIPTION -->
-	<div class='form-group' ng-class='{ "has-error": registrationForm.disabilityDescription.$invalid }'>
-		<label for='disabilityDescription' class='control-label col-sm-2'>Diagnose Beeinträchtigung</label>
-		<div class='col-sm-10'>
-			<input name='disabilityDescription' type='text' ng-model='disabilityDescription' class='form-control'></input>
+	<!-- HASHEALTHISSUES -->
+	<div class='col-sm-offset-2 col-sm4 form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
+		<label for='hasHealthIssues' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTHISSUES_CHILD" | translate}}</label>
+		<div class='col-sm-8 btn-group' role='group' required>
+			<button type="button" ng-class='{"btn-info": hasHealthIssues && isHasHealthIssuesSet()}' class="btn btn-default" ng-click="setHasHealthIssues(true)">{{"BTN.YES" | translate}}</button>
+			<button type="button" ng-class='{"btn-info": !hasHealthIssues && isHasHealthIssuesSet()}' class="btn btn-default" ng-click="setHasHealthIssues(false)">{{"BTN.NO" | translate}}</button>
+			<!--<input type='checkbox' name='hasHealthIssues' ng-model='hasHealthIssues'></input>-->
 		</div>
 	</div>
+	<!-- HEALTHINCOMPATIBILITY -->
+	<div ng-show='hasHealthIssues' class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='healthIncompatibility' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_INCOMPATIBILITY" | translate}}</label>
+		<div class='col-sm-8'>
+			<input type='text' name='healthIncompatibility' ng-model='healthIncompatibility' maxlength='100' class='form-control'></input>
+		</div>
+	</div>
+	<!-- HEALTHALLERGY -->
+	<div ng-show='hasHealthIssues' class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='healthAllergy' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_ALLERGY" | translate}}</label>
+		<div class='col-sm-8'>
+			<input type='text' name='healthAllergy' ng-model='healthAllergy' maxlength='100' class='form-control'></input>
+		</div>
+	</div>
+	<!-- HEALTHILLNESS -->
+	<div ng-show='hasHealthIssues' class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='healthIllnes' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_ILLNESS" | translate}}</label>
+		<div class='col-sm-8'>
+			<input type='text' name='healthIllnes' ng-model='healthIllnes' maxlength='100' class='form-control'></input>
+		</div>
+	</div>
+	<!-- HEALTHCHILD -->
+	<!--<div class='form-group' ng-class='{ "has-error": registrationForm.healthChild.$invalid }'>
+		<label for='healthChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_CHILD" | translate}}</label>
+		<div class='col-sm-8'>
+			<textarea name='healthChild' ng-model='healthChild' rows='3' maxlength='350' class='form-control'></textarea>
+		</div>
+	</div>-->
 
+	<!-- HASDISABILITY -->
+	<div class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='hasDisability' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DISABILITY_CHILD" | translate}}</label>
+		<div class='col-sm-8 btn-group'>
+				<button type="button" ng-class='{"btn-info": hasDisability && isHasDisabilitySet()}' class="btn btn-default" ng-click="setHasDisability(true)">{{"BTN.YES" | translate}}</button>
+				<button type="button" ng-class='{"btn-info": !hasDisability && isHasDisabilitySet()}' class="btn btn-default" ng-click="setHasDisability(false)">{{"BTN.NO" | translate}}</button>	
+			<!--<input type='checkbox' name='hasDisability' ng-model='hasDisability'></input>-->
+		</div>
+	</div>
+	<!-- DISABILITYDESCRIPTION -->
+	<div ng-show='hasDisability' class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='disabilityDescription' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DISABILITY_CHILD_DESCRIPTION" | translate}}</label>
+		<div class='col-sm-8'>
+			<input type='text' name='disabilityDescription' ng-model='disabilityDescription' maxlength='100' class='form-control'></input>
+		</div>
+	</div>	
+	<div ng-show='hasDisability' class='col-sm-offset-2 col-sm4 form-group'>
+		<label for='diagnosticDescription' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DIAGNOSTIC_CHILD_DESCRIPTION" | translate}}</label>
+		<div class='col-sm-8'>
+			<input type='text' name='diagnosticDescription' ng-model='diagnosticDescription' maxlength='100' class='form-control'></input>
+		</div>
+	</div>
 	<!-- CANSWIM -->
 	<div ng-show='platform.isJDUL()' class='col-sm-offset-2 col-sm4'>
 		<input type='checkbox' name='canSwin' ng-model='canSwim'><strong>  {{"RESERVATION.LABEL_CANSWIM_CHILD" | translate}}</input>
@@ -132,9 +165,9 @@
 		</div>
 	</div>
 	<!-- NEEDSEBK -->
-	<div class='col-sm-offset-2 col-sm4'>
+	<!-- <div class='col-sm-offset-2 col-sm4'>
 		<input type='checkbox' name='needsEbk' ng-model='needsEbK'><strong>  Ebk</input>
-	</div>
+	</div> -->
 
 	<div class='col-sm-offset-2 col-sm-10' style='margin-top:15px;'>
 			<input class='btn btn-success bnt-lg btn-block' type='submit' value='Speichern'>
