bug fixes + warteliste mail jdbl

--- a/public/templates/agb/agb-jdbl-de.html
+++ b/public/templates/agb/agb-jdbl-de.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;tsbedingungen</h2>
+    <h2 class='text-orange col-sm-12'>Allgemeine Gesch&auml;ftsbedingungen</h2>
     <div>
 
 	    <div class='col-sm-9'>
@@ -15,5 +15,5 @@
 	    </div>
 	</div>
 	<br />
-	<div ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
+	<div ng-include src='"agb/ds-jdbl-de.html"'></div>
 </div>
