--- a/public/templates/agb/agb-jdbl-it.html
+++ b/public/templates/agb/agb-jdbl-it.html
@@ -15,5 +15,5 @@
 	    </div>
 	</div>
 	<br />
-	<div ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
+	<div ng-include src='"agb/ds-jdbl-it.html"'></div>
 </div>
